--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<h1>преподаватель</h1>
 	<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat vel quasi at autem nulla incidunt magni expedita. Impedit officia quo, dolorem modi corporis nihil? Aliquam repellat reiciendis impedit non ea?</p>
 		<div class="bloc">
-		<span class="block__item"><span>
+		<span class="block__item">ggg<span>
 			<div class="bloc__ red></div>
 	</div>
 </body>
